--- a/neuroguides-project/package.json
+++ b/neuroguides-project/package.json
@@ -10,21 +10,23 @@
   },
   "dependencies": {
     "@react-native-picker/picker": "2.7.5",
-    "expo": "~51.0.38",
+    "expo": "~51.0.39",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
+    "expo-router": "~3.5.24",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1"
+    "react-native-screens": "3.31.1",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "~5.3.3"
   },
   "private": true
